syntax = "proto3";
// ../../../protoc-3.5.0-osx-x86_64/bin/protoc --proto_path=../../../protoc-3.5.0-osx-x86_64/:../../../vendor/:. --gogofaster_out=. message.proto

package centrifugo.proto;
option go_package = "proto";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;

message ClientInfo {
  string User = 1 [(gogoproto.jsontag) = "user"];
  string Client = 2 [(gogoproto.jsontag) = "client"];
  bytes ConnInfo = 3 [(gogoproto.customtype) = "github.com/centrifugal/centrifugo/libcentrifugo/raw.Raw", (gogoproto.jsontag) = "conn_info,omitempty", (gogoproto.nullable) = false];
  bytes ChanInfo = 4 [(gogoproto.customtype) = "github.com/centrifugal/centrifugo/libcentrifugo/raw.Raw", (gogoproto.jsontag) = "chan_info,omitempty", (gogoproto.nullable) = false];
}

message Message {
  string UID = 1 [(gogoproto.jsontag) = "uid"];
  string Channel = 2 [(gogoproto.jsontag) = "channel"];
  bytes Data = 3 [(gogoproto.customtype) = "github.com/centrifugal/centrifugo/libcentrifugo/raw.Raw", (gogoproto.jsontag) = "data", (gogoproto.nullable) = false];
  string Client = 4 [(gogoproto.jsontag) = "client,omitempty"];
  ClientInfo Info = 5 [(gogoproto.jsontag) = "info,omitempty"];
}

message JoinMessage {
  string Channel = 1 [(gogoproto.jsontag) = "channel"];
  ClientInfo Data = 2 [(gogoproto.jsontag) = "data", (gogoproto.nullable) = false];
}

message LeaveMessage {
  string Channel = 1 [(gogoproto.jsontag) = "channel"];
  ClientInfo Data = 2 [(gogoproto.jsontag) = "data", (gogoproto.nullable) = false];
}
